--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,6 +37,13 @@ jobs:
 
       - name: build
         run: python -m build
+        
+      - name: Upload built packages
+        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
+        with:
+          name: built-packages
+          path: ./dist/
+          if-no-files-found: warn
 
   pypi-publish:
     name: upload release to PyPI
