--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,35 +16,6 @@ permissions:
   contents: read
 
 jobs:
-  build:
-    name: Build and sign artifacts
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-    outputs:
-      hashes: ${{ steps.hash.outputs.hashes }}
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-
-      - uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236
-        with:
-          python-version: "3.x"
-          cache: "pip"
-          cache-dependency-path: pyproject.toml
-
-      - name: deps
-        run: python -m pip install -U build
-
-      - name: build
-        run: python -m build
-        
-      - name: Upload built packages
-        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
-        with:
-          name: built-packages
-          path: ./dist/
-          if-no-files-found: warn
-
   pypi-publish:
     name: upload release to PyPI
     runs-on: ubuntu-latest
@@ -54,7 +25,20 @@ jobs:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
     steps:
-      # retrieve your distributions here
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-python@v4
+        name: Install Python
+        with:
+          python-version: "3.11"
+
+      - name: Build wheels
+        run: |
+          git clean -fxd
+          python -m pip install -U build
+          python -m build
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
